--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run ramdisk
-        run: sudo cargo run -p nbd-ramdisk --release 
+        run: sudo cargo run -p nbd-ramdisk --release &
       
       - name: Make a NBD device
         run: sudo nbd-client localhost 10809 /dev/nbd0
