--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,4 @@ jobs:
         run: sudo cargo run -p nbd-ramdisk --release &
       
       - name: Make a NBD device
-        run: sudo nbd-client localhost 10809 /dev/nbd0
+        run: sudo nbd-client 127.0.0.1 10809 /dev/nbd0
